fix grid overflow and remove angular materials

--- a/src/app/modules/home/pages/dashboard/dashboard.component.sass
+++ b/src/app/modules/home/pages/dashboard/dashboard.component.sass
@@ -38,10 +38,10 @@
 
 .wrapper
   display: grid
-  // minmax(width...)
+  height: inherit
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr))
   gap: 5px
-  grid-auto-rows: 200px
+  //grid-auto-rows: 200px
 
 .items
   border-style: solid
